--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,8 @@
     ]
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.21.0",
+    "@redwoodjs/auth": "0.49.1",
     "@redwoodjs/forms": "0.49.1",
     "@redwoodjs/router": "0.49.1",
     "@redwoodjs/web": "0.49.1",
