--- a/web/package.json
+++ b/web/package.json
@@ -14,10 +14,10 @@
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.21.0",
-    "@redwoodjs/auth": "0.49.1",
-    "@redwoodjs/forms": "0.49.1",
-    "@redwoodjs/router": "0.49.1",
-    "@redwoodjs/web": "0.49.1",
+    "@redwoodjs/auth": "^0.50.0",
+    "@redwoodjs/forms": "^0.50.0",
+    "@redwoodjs/router": "^0.50.0",
+    "@redwoodjs/web": "^0.50.0",
     "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
